# rusiian_auto_annotation

./: .dockerignore  .gitignore  Dockerfile  README.md  apptainer.def  apptainer_llamacpp.def  backends.py  docker-compose.yml  evaluate.py  evaluate_drowsiness.py  main.py  main_drowsiness.py  pyproject.toml
docker/: entrypoint.sh
src/detection/: main.py  main_drowsiness.py
src/eval_icce/: README.md  __init__.py  align.py  data.csv  ena.py  evaluate.py  io.py  metrics.py  report.py  stacked_bar.py
src/evaluation/: evaluate.py  visualize.py
