[project]
name = "rusiian-auto-annotation"
version = "0.1.0"
description = "ロシア語学習シーンの注視対象を自動判定するツール"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "ollama>=0.6.1",
    "opencv-python-headless>=4.13.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = []
